...
    <string name="n8_controls_a11y_l">Botón L</string>
    <string name="n8_controls_a11y_r">Botón R</string>
    <string name="n8_editor_control_l">L</string>
    <string name="n8_editor_control_r">R</string>
    <string name="n8_editor_title_gba_portrait">Controles GBA · Vertical</string>
    <string name="n8_editor_title_gba_landscape">Controles GBA · Horizontal</string>
    <string name="n8_game_system_gba">Game Boy Advance</string>
    <string name="n8_details_fact_save_type">Tipo de partida</string>
    <string name="n8_details_detected">%1$s (detectado)</string>
    <string name="n8_details_fact_game_code">Código del juego</string>
    <string name="n8_details_fact_rtc">Reloj (RTC)</string>
    <string name="n8_details_rtc_yes">Sí</string>
    <string name="n8_details_rtc_no">No</string>
...
